<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/read">
        <menu>
            <group
                android:id="@+id/read"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_my_books"
                    android:icon="@drawable/ic_books"
                    android:title="@string/my_books"/>
                <item
                    android:id="@+id/nav_my_comics"
                    android:icon="@drawable/ic_bubble"
                    android:title="@string/my_comics"/>
                <item
                    android:id="@+id/nav_favorites"
                    android:icon="@drawable/ic_favorite"
                    android:title="@string/favorites"/>
                <item
                    android:id="@+id/nav_collections"
                    android:icon="@drawable/ic_folder"
                    android:title="@string/collections"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/get_books">
        <menu>
            <group
                android:id="@+id/get_books"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_add_file"
                    android:icon="@drawable/ic_folder"
                    android:title="@string/files"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <group
                android:id="@+id/settings"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"/>
            </group>
        </menu>
    </item>
</menu>
